create handleSubmit and createCard function for search characters button

--- a/index.css
+++ b/index.css
@@ -21,6 +21,10 @@ body {
     background: midnightblue;
 }
 
-.container {
+.form-container {
     background: midnightblue;
+}
+
+.card {
+    color: black;
 }
